issue #4 - add streamex dependency, refactoring